<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/topG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/lowerG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Guideline
            android:id="@+id/startG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/endG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toStartOf="@id/personName"
            app:layout_constraintStart_toStartOf="@id/startG"
            app:layout_constraintTop_toTopOf="@id/topG" />

        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/personName"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/personImage"
            app:layout_constraintTop_toTopOf="@id/topG" />

        <TextView
            android:id="@+id/personAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/address"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/personImage"
            app:layout_constraintTop_toBottomOf="@id/personName" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:cropToPadding="false"
            android:rotationY="180"
            android:id="@+id/addFriend"
            android:scaleType="center"
            android:src="@drawable/ic_person_add_black_24dp"
            app:layout_constraintEnd_toEndOf="@id/endG"
            app:layout_constraintTop_toTopOf="@id/personName" />

        <TextView
            android:id="@+id/askedAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/lightGrey"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/askedAnd"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/personImage"
            app:layout_constraintTop_toBottomOf="@id/personImage" />

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/question"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/endG"
            app:layout_constraintStart_toStartOf="@id/startG"
            app:layout_constraintTop_toBottomOf="@id/askedAnswered" />

        <ImageView
            android:id="@+id/ansImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:src="@android:drawable/ic_menu_report_image"
            app:layout_constraintBottom_toTopOf="@id/lowerG"
            app:layout_constraintStart_toStartOf="@id/startG"
            app:layout_constraintTop_toBottomOf="@id/question" />


        <TextView
            android:id="@+id/ansHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ansHeading"
            android:maxLines="2"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/endG"
            app:layout_constraintStart_toEndOf="@id/ansImage"
            app:layout_constraintTop_toTopOf="@id/ansImage" />

        <TextView
            android:id="@+id/ansContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:text="@string/ansContent"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/lowerG"
            app:layout_constraintEnd_toEndOf="@id/endG"
            app:layout_constraintStart_toEndOf="@id/ansImage"
            app:layout_constraintTop_toBottomOf="@id/ansHeading" />

        <android.support.constraint.Group
            android:id="@+id/answerGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ansImage,ansContent,ansHeading" />

        <android.support.constraint.Group
            android:id="@+id/personGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids=",personName,personImage,personAddress" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>